@@ -2020,3 +2020,4 @@
   EntityEditPanel.addPropertyPanel() added, used throughout
   ConnectionPoolImpl bug fixed, creating a connection did not prevent another one from being created at the sam time
   UsageScenario.runScenario() now throws ScenarioException
+  ConnectionPoolImpl bettered a bit
